# CUSTOM_JLX

./: CMakeLists.txt  Makefile  README.md  config.txt
include/: Adafactor.h  DataLoader.h  Kernel.h  Layer.h  LinearTernary.h  Loss.h  MetalContext.h  Model.h  SparseAttention.h  SparseFFN.h  SparseTernaryLinear.h  Tensor.h  TierManager.h
include/runtime/: Config.h  Executor.h  Quantizer.h
kernels/: ops.metal
scripts/: prepare_data.py  prompt.py  tempCodeRunnerFile.py
src/: Adafactor.mm  DataLoader.mm  Kernel.mm  Layer.mm  LinearTernary.mm  Loss.mm  Model.mm  SparseAttention.mm  SparseFFN.mm  SparseTernaryLinear.mm  Tensor.mm  TierManager.mm  inference.mm  main.mm
src/runtime/: Config.mm  Executor.mm  Quantizer.mm
